# next-cvat

./: .cursorrules  .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini
.github/workflows/: docs.yml  gh-pages.yml  publish.yml  test.yml
api/annotations/: index.html
api/client/: index.html
api/frame/: index.html
api/job/: index.html
api/job_annotations/: index.html
api/project/: index.html
api/task/: index.html
api/types/: index.html
cvat_annotations/: __init__.py  annotation_types.py  annotations.py
docs/: index.md
docs/api/: annotations.md  client.md  frame.md  job.md  job_annotations.md  project.md  task.md  types.md
docs/examples/: basic_usage.md  jobs.md  tasks.md
examples/basic_usage/: index.html
next_cvat/: __init__.py  __main__.py  annotation_types.py  annotations.py  create_token.py  download.py  settings.py  types.py
next_cvat/app/: app.py  create_token.py  download.py
next_cvat/client/: client.py  frame.py  job.py  job_annotations.py  project.py  task.py
next_cvat/types/: __init__.py  attribute.py  box.py  ellipse.py  job_status.py  mask.py  task.py
notebooks/: add_images.py  investigate_api.py  upload_mask.py  upload_mask_job.py  upload_mask_xml.py
search/: search_index.json
tests/: conftest.py  mask_annotations.xml  test_add_mask.py  test_add_polygon.py  test_add_polyline.py  test_add_tag.py  test_annotations.py  test_client.py  test_create_task.py  test_create_token.py  test_download.py  test_ellipse.py  test_frame.py  test_mask.py  test_mask_performance.py  test_mask_request.py  test_project.py  test_readme.py  test_tag.py  test_task.py  test_vegetation_mask.json
