[tool.poetry]
name = "next-cvat"
version = "0.0.0"
description = "Helper to work with cvat annotations"
authors = ["nextml"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cvat-sdk = "^2.18.0"
Pillow = "*"
numpy = "^1.19.2"
pydantic = "^2.0.0"
typer = "^0.12.5"
pydantic-settings = "^2.6.1"

[tool.poetry.scripts]
next-cvat = "next_cvat.__main__:main"
cvat = "next_cvat.__main__:main"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
flake8 = "^3.8.4"
black = "^22.3.0"
pytest = "^6.1.2"
autoflake = "^1.6.1"
pydantic-settings ="^2.5.2"

[[tool.poetry.source]]
name = "nextml"
url = "https://api.packagr.app/882TAwUpj/"
priority="explicit"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
