[tool.poetry]
name = "next-cvat"
version = "0.0.0"
description = "Minimalistic python SDK for CVAT"
authors = ["nextml"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cvat-sdk = "^2.18.0"
Pillow = "*"
numpy = "^1.19.2"
pydantic = "^2.0.0"
typer = "*"
pydantic-settings = "^2.6.1"
eval-type-backport = { version = "*", python = "<3.10" }

[tool.poetry.scripts]
next-cvat = "next_cvat.__main__:main"
cvat = "next_cvat.__main__:main"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
flake8 = "^3.8.4"
black = "^22.3.0"
pytest = "^6.1.2"
autoflake = "^1.6.1"
pydantic-settings ="^2.5.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
