[tool.poetry]
name = "next-cvat"
version = "0.0.0"
description = "Minimalistic python SDK for CVAT"
authors = ["nextml"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cvat-sdk = "^2.43.0"
Pillow = "*"
numpy = "^1.19.2"
pydantic = "^2.0.0"
typer = "*"
pydantic-settings = "^2.6.1"
eval-type-backport = { version = "*", python = "<3.10" }

[tool.poetry.scripts]
next-cvat = "next_cvat.__main__:main"
cvat = "next_cvat.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-codeblocks = "^0.17.0"
black = "^24.0.0"
mkdocs-material = "^9.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
griffe = "^0.38.1"
pylint = "^2.6.0"
flake8 = "^3.8.4"
autoflake = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
